project/syntax_tests/tests_input/unit/good/Good48.ty
singleton class Greeter { 
    
    actions: {
        greet: (name: String) -> Void = {
            System#printLine("Hi " ++ name)
        }
    }
}
