project/syntax_tests/tests_input/unit/bad/Bad05.ty
singleton class Loop { 
    
    values: {}
    
    actions: {
        loop: (list: SomeListType) -> Int = {
            for (element: Int in list) element
            2
        }
    }
}
